--- a/lab04/zad01.ipynb
+++ b/lab04/zad01.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-24T14:17:03.236372Z",
-     "start_time": "2024-10-24T14:17:03.016791Z"
+     "end_time": "2024-10-26T14:36:24.183269Z",
+     "start_time": "2024-10-26T14:36:24.005357Z"
     }
    },
    "source": [
@@ -27,8 +27,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T14:17:05.389896Z",
-     "start_time": "2024-10-24T14:17:05.384399Z"
+     "end_time": "2024-10-26T14:36:24.202794Z",
+     "start_time": "2024-10-26T14:36:24.197763Z"
     }
    },
    "id": "9ca39951f876d172",
@@ -46,8 +46,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T14:17:05.962609Z",
-     "start_time": "2024-10-24T14:17:05.959203Z"
+     "end_time": "2024-10-26T14:36:27.342567Z",
+     "start_time": "2024-10-26T14:36:27.339210Z"
     }
    },
    "id": "8504327c3c13118a",
@@ -62,8 +62,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T14:17:06.378729Z",
-     "start_time": "2024-10-24T14:17:06.372277Z"
+     "end_time": "2024-10-26T14:36:30.008252Z",
+     "start_time": "2024-10-26T14:36:30.002956Z"
     }
    },
    "id": "ca9c18961a6d8298",
@@ -78,8 +78,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T14:17:06.628857Z",
-     "start_time": "2024-10-24T14:17:06.625826Z"
+     "end_time": "2024-10-26T14:36:31.303462Z",
+     "start_time": "2024-10-26T14:36:31.300425Z"
     }
    },
    "id": "a9c6f41f7ece0dfc",
@@ -94,8 +94,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T14:17:06.912257Z",
-     "start_time": "2024-10-24T14:17:06.909122Z"
+     "end_time": "2024-10-26T14:36:32.028892Z",
+     "start_time": "2024-10-26T14:36:32.025825Z"
     }
    },
    "id": "468a33dcc6d1ca8",
@@ -145,8 +145,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T14:17:07.263966Z",
-     "start_time": "2024-10-24T14:17:07.256464Z"
+     "end_time": "2024-10-26T14:36:47.464460Z",
+     "start_time": "2024-10-26T14:36:47.456895Z"
     }
    },
    "id": "626c2e1576217523",
@@ -172,8 +172,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-24T14:17:10.220702Z",
-     "start_time": "2024-10-24T14:17:08.361855Z"
+     "end_time": "2024-10-26T14:36:53.618113Z",
+     "start_time": "2024-10-26T14:36:50.212226Z"
     }
    },
    "id": "49345090a1e198f7",
@@ -191,6 +191,127 @@
     }
    ],
    "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# TESTING ON OTHER DATA",
+   "id": "229177e6fd6ca016"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-26T14:44:02.956532Z",
+     "start_time": "2024-10-26T14:44:02.949627Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x, y = 'ACGT', 'AAAACGT'\n",
+    "needleman_wunsch(x, y)"
+   ],
+   "id": "7925732bd2aee28a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('---ACGT', 'AAAACGT'),\n",
+       " ('--A-CGT', 'AAAACGT'),\n",
+       " ('-A--CGT', 'AAAACGT'),\n",
+       " ('A---CGT', 'AAAACGT')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-26T14:44:03.487929Z",
+     "start_time": "2024-10-26T14:44:03.482561Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x, y = 'ACGT', 'ACGT'\n",
+    "needleman_wunsch(x, y)"
+   ],
+   "id": "6be0cd516a2307c9",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ACGT', 'ACGT')]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-26T14:44:03.905506Z",
+     "start_time": "2024-10-26T14:44:03.901202Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x, y = 'ACGT', 'ACGTACGT'\n",
+    "needleman_wunsch(x, y)"
+   ],
+   "id": "80ace46cf952d95b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('----ACGT', 'ACGTACGT'),\n",
+       " ('A----CGT', 'ACGTACGT'),\n",
+       " ('AC----GT', 'ACGTACGT'),\n",
+       " ('ACG----T', 'ACGTACGT'),\n",
+       " ('ACGT----', 'ACGTACGT')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-26T14:44:04.586283Z",
+     "start_time": "2024-10-26T14:44:04.581760Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x, y = 'GATACCA', 'GATTACA'\n",
+    "needleman_wunsch(x, y)"
+   ],
+   "id": "92f6355d8b7308b3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('GATACCA', 'GATTACA')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
   }
  ],
  "metadata": {
